--- a/platform/plugins/Q/web/css/Ui.css
+++ b/platform/plugins/Q/web/css/Ui.css
@@ -1344,7 +1344,7 @@ body { text-align: center; height: 100%; }
 #column0_slot #content { width: 100%; }
 #content { position: relative; }
 #content_slot { position: relative; }
-#page { position: absolute; top: 50px; bottom: 0px; width: 100%; overflow: auto; /* top: 54px; */ /* padding-top: 10px; */
+#page { position: absolute; top: 50px; bottom: 0px; width: 100%; /* top: 54px; */ /* padding-top: 10px; */
     left:50%; margin-left:-50%; /* reset position for ie7, ff4+ */
 }
 
